iml-services/iml-devices/src/snapshots/virtual_device_changes__vd_with_two_levels_of_shared_parents_updated_on_oss2.snap
---
source: iml-services/iml-devices/src/virtual_device.rs
expression: changes
---
{
    (
        DeviceId(
            "d",
        ),
        Fqdn(
            "oss2",
        ),
    ): Update(
        DeviceHost {
            device_id: DeviceId(
                "d",
            ),
            fqdn: Fqdn(
                "oss2",
            ),
            local: false,
            paths: Paths(
                {
                    "/fake/path/dataset/a",
                },
            ),
            mount_path: MountPath(
                None,
            ),
            fs_type: Some(
                "some_fs",
            ),
            fs_label: Some(
                "new_some_label",
            ),
            fs_uuid: Some(
                "some_uuid",
            ),
        },
    ),
}
